--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@clerk/express": "^1.7.62",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.11.3",
     "zod": "^3.23.8"
   },
